--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "uglify-js": "^3.19.3"
   }
 }
