--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "backend",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -19,6 +22,6 @@
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
-    "uglify-js": "^3.19.3"
+    "terser": "^5.37.0"
   }
 }
